change date format on detail page to match main page

--- a/radio/templates/radio/transmission_detail.html
+++ b/radio/templates/radio/transmission_detail.html
@@ -15,7 +15,7 @@
 	<div class="row"> 
 		<div class="col-xs-1"></div>
 		<div class="col-xs-2"><strong>Start Time</strong></div>
-		<div class="col-xs-6">{{ object.start_datetime }}</div>
+		<div class="col-xs-6">{{ object.local_start_datetime }}</div>
 		<div class="col-xs-4"></div>
 	</div>
 	<div class="row">
